--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,7 +7,29 @@ footer {
   margin-bottom: -7rem;
 }
 
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
 
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
 
 .table>tbody>tr>td, .table>tfoot>tr>td{
     vertical-align: middle;
